[package]
name = "debug_canvas"
version = "0.1.0"
edition = "2021"
description = "Easily print complicated debug strings"
authors = ["Jack Reilly", "Jack Reilly <jackdreilly@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jackdreilly/debug_canvas"
repository = "https://github.com/jackdreilly/debug_canvas"
documentation = "https://github.com/jackdreilly/debug_canvas"

[dependencies]
